<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.doge</groupId>
    <artifactId>doge-chat</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jeromq.version>0.6.0</jeromq.version>
        <protoc.version>4.30.2</protoc.version>
        <picocli.version>4.7.6</picocli.version>
        <rxjava.version>3.1.8</rxjava.version>
        <grpc.version>1.61.1</grpc.version>
        <reactive.grpc.version>1.2.4</reactive.grpc.version>
    </properties>

    <modules>
        <module>common</module>
        <module>client</module>
        <module>chat-server</module>
        <module>aggregation-server</module>
    </modules>
</project>
